# conclave

./: .gitignore  .rustfmt.toml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: docs.yaml  release.yaml
assets/themes/: conclave.toml  ferra.toml  greyscale.toml  navy.toml
configs/: client.example.toml  server.example.toml
contrib/: conclave-server.service
crates/conclave-cli/: Cargo.toml
crates/conclave-cli/src/: error.rs  main.rs  notification.rs  tui.rs
crates/conclave-cli/src/tui/: commands.rs  events.rs  input.rs  mod.rs  render.rs  state.rs  store.rs
crates/conclave-client/: Cargo.toml
crates/conclave-client/src/: api.rs  command.rs  conclave_client.rs  config.rs  duration.rs  error.rs  main.rs  mls.rs  operations.rs  repl.rs  state.rs  store.rs
crates/conclave-client/src/operations/: account.rs  groups.rs  messaging.rs
crates/conclave-client/src/tui/: commands.rs  events.rs  input.rs  mod.rs  render.rs  state.rs  store.rs
crates/conclave-gui/: Cargo.toml  build.rs
crates/conclave-gui/src/: app.rs  main.rs  notification.rs  screen.rs  subscription.rs  theme.rs  widget.rs
crates/conclave-gui/src/app/: commands.rs  login.rs  rooms.rs  sse.rs
crates/conclave-gui/src/screen/: dashboard.rs  login.rs
crates/conclave-gui/src/theme/: button.rs  config.rs  container.rs  mod.rs  scrollable.rs  text.rs  text_editor.rs  text_input.rs
crates/conclave-gui/src/widget/: message_view.rs  selectable_rich_text.rs
crates/conclave-lib/: Cargo.toml
crates/conclave-lib/src/: api.rs  command.rs  config.rs  lib.rs  mls.rs  notification.rs  operations.rs  state.rs  store.rs
crates/conclave-lib/src/operations/: groups.rs  messaging.rs
crates/conclave-proto/: Cargo.toml  build.rs
crates/conclave-proto/src/: lib.rs
crates/conclave-server/: Cargo.toml
crates/conclave-server/src/: api.rs  auth.rs  config.rs  db.rs  duration.rs  error.rs  lib.rs  main.rs  state.rs  validation.rs
crates/conclave-server/src/api/: accounts.rs  auth.rs  external.rs  groups.rs  invites.rs  key_packages.rs  members.rs  messages.rs  sse.rs  welcomes.rs
crates/conclave-server/src/db/: bans.rs  groups.rs  invites.rs  key_packages.rs  messages.rs  sessions.rs  users.rs  welcomes.rs
crates/conclave-server/tests/: api_tests.rs  protocol_flow_tests.rs
docs/: SPEC.md  TPM.md  WORKLOG.md
docs/spec/: book.toml
docs/spec/src/: SUMMARY.md  introduction.md
docs/spec/src/api/: accounts.md  authentication.md  conventions.md  events.md  groups.md  invites.md  key-packages.md  members.md  messages.md  users.md  welcomes.md
docs/spec/src/appendices/: duration-format.md  error-codes.md  protobuf-schema.md  server-configuration.md  validation-rules.md
docs/spec/src/architecture/: authentication.md  id-referencing.md  overview.md  sse.md  transport.md
docs/spec/src/flows/: account-deletion.md  account-reset.md  escrow-invite.md  group-deletion.md  group-messaging.md  key-rotation.md  member-removal.md  registration.md
docs/spec/src/mls/: group-lifecycle.md  identity.md  key-packages.md  overview.md  tofu.md
docs/spec/src/retention/: overview.md
docs/spec/src/security/: properties.md  threats.md
docs/spec/src/usage/: censorship.md  client.md  quickstart.md  server.md
docs/usage/: book.toml
docs/usage/src/: SUMMARY.md  censorship.md  client.md  introduction.md  quickstart.md  server.md
proto/conclave/v1/: conclave.proto
themes/: conclave.toml  ferra.toml  greyscale.toml  navy.toml
