[workspace]
resolver = "3"
members = [
    "crates/conclave-proto",
    "crates/conclave-server",
    "crates/conclave-lib",
    "crates/conclave-cli",
    "crates/conclave-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
conclave-proto = { path = "crates/conclave-proto" }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "2"
