[package]
name = "conclave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conclave-cli"
path = "src/main.rs"

[dependencies]
conclave-lib = { path = "../conclave-lib" }
conclave-proto = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["http2"] }
reqwest-eventsource = "0.6"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
