[package]
name = "conclave-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conclave-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { workspace = true }
conclave-client = { path = "../conclave-client" }
conclave-proto = { workspace = true }
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
hex = { workspace = true }
notify-rust = "4.12"
prost = { workspace = true }
reqwest = { version = "0.12", features = ["http2"] }
reqwest-eventsource = "0.6"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"
