[package]
name = "conclave-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conclave-client"
path = "src/main.rs"

[dependencies]
conclave-proto = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["http2"] }
rustyline = "15"
directories = "6"
anyhow = "1"
mls-rs = { version = "0.53", features = ["sqlite-bundled"] }
mls-rs-core = "0.25"
mls-rs-codec = "0.7"
mls-rs-crypto-openssl = "0.19"
mls-rs-provider-sqlite = { version = "0.21", features = ["sqlite-bundled"] }
