[package]
name = "conclave-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/conclave_client.rs"

[features]
default = ["command"]
command = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
conclave-proto = { workspace = true }
directories = "6"
fd-lock = "4"
hex = { workspace = true }
mls-rs = { version = "0.53", features = ["sqlite-bundled", "last_resort_key_package_ext"] }
mls-rs-codec = "0.7"
mls-rs-core = "0.25"
mls-rs-crypto-openssl = "0.19"
mls-rs-provider-sqlite = { version = "0.21", features = ["sqlite-bundled"] }
prost = { workspace = true }
reqwest = { version = "0.12", features = ["http2"] }
reqwest-eventsource = "0.6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
