[package]
name = "conclave-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conclave-gui"
path = "src/main.rs"

[dependencies]
conclave-lib = { path = "../conclave-lib" }
conclave-proto = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
iced = { version = "0.14", features = ["tokio", "advanced", "image"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", features = ["http2"] }
reqwest-eventsource = "0.6"
async-stream = "0.3"
futures-util = "0.3"

[build-dependencies]
winres = "0.1"
