[package]
name = "conclave-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conclave-gui"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
conclave-client = { path = "../conclave-client" }
conclave-proto = { workspace = true }
futures-util = "0.3"
hex = { workspace = true }
iced = { version = "0.14", features = ["tokio", "advanced", "image"] }
notify-rust = "4.12"
prost = { workspace = true }
reqwest = { version = "0.12", features = ["http2"] }
reqwest-eventsource = "0.6"
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[build-dependencies]
winres = "0.1"
