[package]
name = "conclave-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conclave-server"
path = "src/main.rs"

[dependencies]
conclave-proto = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
axum = { version = "0.8", features = ["http2"] }
rusqlite = { version = "0.37", features = ["bundled"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
anyhow = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
conclave-lib = { path = "../conclave-lib" }
tempfile = "3"
