[package]
name = "conclave-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "conclave-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["http2"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
clap = { workspace = true }
conclave-proto = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { workspace = true }
sha2 = "0.10"
subtle = "2"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
conclave-client = { path = "../conclave-client" }
http-body-util = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
